force-app/main/default/objects/Club_Payment__c/Club_Payment__c.object-meta.xml
<CustomObject>
    <label>Club Payment</label>
    <nameField>
        <displayFormat>Club-{00000}</displayFormat>
        <label>Club Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>