force-app/main/default/objects/Club_Payment__c/fields/Enrolled_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a program that this payment will go towards.</inlineHelpText>
    <label>Enrolled Program</label>
    <referenceTo>Club_Program__c</referenceTo>
    <relationshipLabel>Club Payments</relationshipLabel>
    <relationshipName>Club_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>