force-app/main/default/objects/Club_Payment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Parent__c</referenceTo>
    <relationshipLabel>Club Payments</relationshipLabel>
    <relationshipName>Club_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>