force-app/main/default/objects/Club_Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>