force-app/main/default/objects/Club_Payment__c/recordTypes/Custom_Amount.recordType-meta.xml
<RecordType>
    <fullName>Custom_Amount</fullName>
    <active>true</active>
    <label>Custom Amount</label>
</RecordType>