force-app/main/default/objects/Club_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent__c</columns>
    <columns>Enrolled_Program__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>