force-app/main/default/objects/Club_Payment__c/listViews/Payments.listView-meta.xml
<ListView>
    <fullName>Payments</fullName>
    <columns>Parent__c</columns>
    <columns>Semester__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Payments</label>
</ListView>